--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مدارس القلاف — الطلاب المتفوقون بالقدرات (50 بطاقة)</title>
-  <meta name="description" content="قائمة الطلاب المتفوقين بالقدرات — 50 بطاقة جاهزة بالاسم والنسبة والصورة لربطها بالموقع الأساسي." />
+  <title>(مدارس القلاف — الطلاب المتفوقون بالقدرات)</title>
+  <meta name="description" content="الطلاب المتفوقون لدي مدرسة القلاف" />
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -35,7 +35,7 @@
         </div>
       </a>
       <nav class="hidden md:flex items-center gap-4 text-sm">
-        <a class="text-gray-700 hover:text-black" href="index.html">العودة للموقع الرئيسي</a>
+        <a class="text-gray-700 hover:text-black" href="https://mkam339.github.io/Alkalaph-private-high-school/">العودة للموقع الرئيسي</a>
       </nav>
     </div>
   </header>
@@ -44,7 +44,7 @@
     <div class="flex items-end justify-between gap-4 mb-6">
       <div>
         <h1 class="text-2xl sm:text-3xl font-extrabold">من تفوقوا بالقدرات</h1>
-        <p class="text-gray-500">50 بطاقة — عدّل الاسم، النسبة، والصورة لكل طالب.</p>
+        <p class="text-gray-500">المتفوقون بالقدرات</p>
       </div>
     </div>
 
@@ -757,7 +757,7 @@
   <footer class="border-t border-gray-100">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 flex flex-col sm:flex-row items-center justify-between gap-3">
       <p class="text-sm text-gray-500">© <span id="year"></span> مدارس القلاف الأهلية الثانوية. جميع الحقوق محفوظة.</p>
-      <p class="text-sm text-gray-400">قائمة شرف — 50 بطاقة.</p>
+      <p class="text-sm text-gray-400">قائمة الطلاب المتفوقون</p>
     </div>
   </footer>
 
