--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>(مدارس القلاف — (الطلاب المتفوقون بالقدرات</title>
+  <title>مدارس القلاف — الطلاب المتفوقون بالقدرات</title>
   <meta name="description" content="الطلاب المتفوقون لدي مدرسة القلاف" />
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
